non_executable_reasons_record/210.txt
3.5
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%javascript
require.config({
    paths: {
        threejs: '//threejs.org/build/three'
    }
});
------------------

[0;36m  File [0;32m"<ipython-input-1-f75676eca08f>"[0;36m, line [0;32m3[0m
[0;31m    %%javascript[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-f75676eca08f>, line 3)

Executability                            : False
